// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar Renders "Not logged in" correctly 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <Blueprint4.Popover2 position=\\"bottom-right\\" interactionKind=\\"hover\\" content={{...}} popoverClassName=\\"desktop-navbar-popover\\" disabled={true} boundary=\\"clippingParents\\" captureDismiss={false} defaultIsOpen={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} matchTargetWidth={false} minimal={false} openOnTargetFocus={true} positioningStrategy=\\"absolute\\" renderTarget={[undefined]} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true}>
        <NavLink className=\\"NavigationBar__link bp4-button bp4-minimal bp4-active\\" to=\\"/welcome\\">
          <Blueprint4.Icon icon=\\"symbol-diamond\\" />
          <Blueprint4.NavbarHeading style={{...}}>
            Source Academy @ NUS
          </Blueprint4.NavbarHeading>
        </NavLink>
      </Blueprint4.Popover2>
      <NavLink className={[Function: className]} to=\\"/githubassessments\\" title=\\"Classroom\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <NavLink className={[Function: className]} to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route path=\\"/playground\\" element={{...}} />
    <Route path=\\"/githubassessments/*\\" element={{...}} />
    <Route path=\\"/contributors\\" element={{...}} />
    <Route path=\\"/courses/:courseId/sourcecast\\" element={{...}} />
    <Route path=\\"/courses/:courseId/achievements\\" element={{...}} />
    <Route path=\\"/sicpjs/:section?\\" element={{...}} />
    <Route path=\\"*\\" element={{...}} />
  </Routes>
</Fragment>"
`;

exports[`NavigationBar Renders correctly for student with course 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <Blueprint4.Popover2 position=\\"bottom-right\\" interactionKind=\\"hover\\" content={{...}} popoverClassName=\\"desktop-navbar-popover\\" disabled={true} boundary=\\"clippingParents\\" captureDismiss={false} defaultIsOpen={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} matchTargetWidth={false} minimal={false} openOnTargetFocus={true} positioningStrategy=\\"absolute\\" renderTarget={[undefined]} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true}>
        <NavLink className=\\"NavigationBar__link bp4-button bp4-minimal bp4-active\\" to=\\"/courses/1\\">
          <Blueprint4.Icon icon=\\"symbol-diamond\\" />
          <Blueprint4.NavbarHeading style={{...}}>
            CS1101S
          </Blueprint4.NavbarHeading>
        </NavLink>
      </Blueprint4.Popover2>
      <NavLink className={[Function: className]} to=\\"/courses/1/sourcecast\\" title=\\"Sourcecast\\">
        <Blueprint4.Icon icon=\\"music\\" />
        <div className=\\"navbar-button-text\\">
          Sourcecast
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/playground\\" title=\\"Playground\\">
        <Blueprint4.Icon icon=\\"code\\" />
        <div className=\\"navbar-button-text\\">
          Playground
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/githubassessments\\" title=\\"Classroom\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/sicpjs\\" title=\\"SICP JS\\">
        <Blueprint4.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/courses/1/achievements\\" title=\\"Achievements\\">
        <Blueprint4.Icon icon=\\"mountain\\" />
        <div className=\\"navbar-button-text\\">
          Achievements
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <NavLink className={[Function: className]} to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route path=\\"/playground\\" element={{...}} />
    <Route path=\\"/githubassessments/*\\" element={{...}} />
    <Route path=\\"/contributors\\" element={{...}} />
    <Route path=\\"/courses/:courseId/sourcecast\\" element={{...}} />
    <Route path=\\"/courses/:courseId/achievements\\" element={{...}} />
    <Route path=\\"/sicpjs/:section?\\" element={{...}} />
    <Route path=\\"*\\" element={{...}} />
  </Routes>
</Fragment>"
`;

exports[`NavigationBar Renders correctly for student without course 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <Blueprint4.Popover2 position=\\"bottom-right\\" interactionKind=\\"hover\\" content={{...}} popoverClassName=\\"desktop-navbar-popover\\" disabled={true} boundary=\\"clippingParents\\" captureDismiss={false} defaultIsOpen={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} matchTargetWidth={false} minimal={false} openOnTargetFocus={true} positioningStrategy=\\"absolute\\" renderTarget={[undefined]} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true}>
        <NavLink className=\\"NavigationBar__link bp4-button bp4-minimal bp4-active\\" to=\\"/welcome\\">
          <Blueprint4.Icon icon=\\"symbol-diamond\\" />
          <Blueprint4.NavbarHeading style={{...}}>
            Source Academy @ NUS
          </Blueprint4.NavbarHeading>
        </NavLink>
      </Blueprint4.Popover2>
      <NavLink className={[Function: className]} to=\\"/githubassessments\\" title=\\"Classroom\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/sicpjs\\" title=\\"SICP JS\\">
        <Blueprint4.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <NavLink className={[Function: className]} to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route path=\\"/playground\\" element={{...}} />
    <Route path=\\"/githubassessments/*\\" element={{...}} />
    <Route path=\\"/contributors\\" element={{...}} />
    <Route path=\\"/courses/:courseId/sourcecast\\" element={{...}} />
    <Route path=\\"/courses/:courseId/achievements\\" element={{...}} />
    <Route path=\\"/sicpjs/:section?\\" element={{...}} />
    <Route path=\\"*\\" element={{...}} />
  </Routes>
</Fragment>"
`;
